--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>3Strokes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/responsive.css">
@@ -42,7 +43,7 @@
                 </form>
             </div>
             <div class="join-btn">
-                <a href="https://3strokes.slack.com" target="_blank">
+                <a href="https://goo.gl/pDVTMn" target="_blank">
                     <button>
                         Join Slack Channel
                     </button>
